--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,62 +1,2 @@
-.cursor-pointer {
-  cursor: pointer;
-}
-
-a {
-  text-decoration: none;
-  transition: all 0.1s;
-}
-
-a:hover,
-a:focus {
-  text-decoration: none;
-  outline: none;
-}
-
-/* bar */
-
-.toolbar .theme--light.v-toolbar.v-sheet {
-  background: linear-gradient(to right, #124A7B, #58ADE4) !important;
-  color: white !important;
-}
-
-.toolbar .theme--light.v-toolbar.v-sheet i {
-  color: white !important;
-}
-
-.toolbar .toolbar-title {
-  position: absolute;
-  width: 100%;
-  margin-left: -16px;
-  font-size: 1.2rem;
-  letter-spacing: 0.25rem;
-}
-
-.toolbar a {
-  z-index: 1000;
-}
-
-.help-index-page .list a {
-  color: rgba(0, 0, 0, 0.6);
-}
-
-/* border */
-
-.bb-1 {
-  border-bottom: 0.15rem solid;
-}
-
-.ba-1 {
-  border: 0.15rem solid;
-}
-
-.b-gray {
-  border-color: #e3e3e3;
-}
-
-.help-index-page .list {
-  height: 3rem;
-  line-height: 3rem;
-  letter-spacing: 0.15rem;
-}
-
+.cursor-pointer{cursor:pointer}a{transition:all .1s}a,a:focus,a:hover{text-decoration:none}a:focus,a:hover{outline:none}.toolbar .theme--light.v-toolbar.v-sheet{background:linear-gradient(90deg,#124a7b,#58ade4)!important;color:#fff!important}.toolbar .theme--light.v-toolbar.v-sheet i{color:#fff!important}.toolbar .toolbar-title{position:absolute;width:100%;margin-left:-16px;font-size:1.2rem;letter-spacing:.25rem}.toolbar a{z-index:1000}.help-index-page .list a{color:rgba(0,0,0,.6)}.bb-1{border-bottom:.15rem solid}.ba-1{border:.15rem solid}.b-gray{border-color:#e3e3e3}.help-index-page .list{height:3rem;line-height:3rem;letter-spacing:.15rem}
+/*# sourceMappingURL=style.css.map*/
