--- a/resources/sass/theme01/_variables.scss
+++ b/resources/sass/theme01/_variables.scss
@@ -5,3 +5,14 @@ $font-color-base: rgba(0,0,0,.6);
 $gray: #e3e3e3;
 $grey-blue: #58ADE4;
 $dark-blue: #124A7B;
+
+/* series-table */
+$c-bg: #b4dfe2;
+$c-font: #5f979b;
+$b-bg: #a9d7b9;
+$b-font: #6ba979;
+$a-bg: #eddd8e;
+$a-font: #9e8a5f;
+$s-bg: #f0acad;
+$s-font: #9e5b59;
+
