--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -131,8 +131,8 @@
                         }
 
                         svg {
-                            height: 100%;
-                            width: 100%;
+                            /* height: 100%;
+                            width: 100%; */
                             path {
                                 stroke: $font-color-base;
                                 stroke-width: 1px;
