--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -112,6 +112,7 @@
             background-position: center;
             background-size: 65%;
             background-image: url("../images/league_logo.png");
+            position: relative;
 
             &:first-child {
                 background-image: url("../images/fido_logo.png");
@@ -131,8 +132,8 @@
                         }
 
                         svg {
-                            /* height: 100%;
-                            width: 100%; */
+                            height: 100%;
+                            width: 100%; 
                             path {
                                 stroke: $font-color-base;
                                 stroke-width: 1px;
