update html overflow-y auto

--- a/resources/sass/theme01/_global.scss
+++ b/resources/sass/theme01/_global.scss
@@ -1,5 +1,8 @@
 html, body {
-    overflow-y: auto;
+    height: 100%;
+    direction: rtl;
+    overflow: hidden;
+    -webkit-backface-visibility: hidden;
 }
 
 .cursor-pointer {
