--- a/resources/sass/theme01/_global.scss
+++ b/resources/sass/theme01/_global.scss
@@ -1,7 +1,7 @@
 html, body {
     height: 100%;
-    direction: rtl;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
     -webkit-backface-visibility: hidden;
 }
 
