update html overflow-y auto

--- a/resources/sass/theme01/_global.scss
+++ b/resources/sass/theme01/_global.scss
@@ -1,6 +1,5 @@
 html, body {
-    overflow: hidden;
-    -webkit-backface-visibility: hidden;
+    -webkit-overflow-scrolling:touch;
 }
 
 .cursor-pointer {
