update html overflow-y auto

--- a/resources/sass/theme01/_global.scss
+++ b/resources/sass/theme01/_global.scss
@@ -1,6 +1,10 @@
 html, body {
 }
 
+.v-application--wrap {
+    min-height: calc(var(--vh, 1vh) * 100) !important;
+}
+
 .cursor-pointer {
     cursor: pointer;
 }
