--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -183,25 +183,27 @@
                 position: relative;
             }
 
-            td {
-                &:first-child {
-                    div {
-                        width: calc(100% - 2px);
-                        left: 0;
+            tr {
+                td {
+                    &:first-child {
+                        div {
+                            width: calc(100% - 2px);
+                            left: 0;
+                        }
                     }
-                }
 
-                vertical-align: top;
+                    vertical-align: top;
 
-                div {
-                    position: absolute;
-                    width: calc(100% - 1px);
-                    height: calc(100% - 1px);
-                    line-height: 100%;
-                    background-color: white;
-                    margin: 1px;
-                    top: -1px;
-                    left: -1px;
+                    div {
+                        position: absolute;
+                        width: calc(100% - 1px);
+                        height: calc(100% - 1px);
+                        line-height: 100%;
+                        background-color: white;
+                        margin: 1px;
+                        top: -1px;
+                        left: -1px;
+                    }
                 }
             }
         }
