--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -198,8 +198,8 @@
                         left: -1px;
 
                         &.first {
-                            width: calc(100% - 2px);
-                            left: 0;
+                            /* width: calc(100% - 2px);
+                            left: 0; */
                         }
                     }
                 }
