--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -193,9 +193,11 @@
                         height: calc(100% - 1px);
                         line-height: 100%;
                         background-color: white;
-                        margin: 1px;
+                        /* top: -1px;
+                        left: -1px; */
+                        /* margin: 1px;
                         top: -1px;
-                        left: -1px;
+                        left: -1px; */
 
                         &.first {
                             /* width: calc(100% - 2px);
