--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -189,7 +189,7 @@
 
                     div {
                         position: absolute;
-                        width: calc(100% - 1px);
+                        width: 100%;
                         height: calc(100% - 1px);
                         background-color: white;
                         /* top: -1px;
