--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -192,6 +192,7 @@
                         width: 100%;
                         height: calc(100% - 1px);
                         background-color: white;
+                        left: -1px;
                         /* top: -1px;
                         left: -1px; */
                         /* margin: 1px;
