--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -192,7 +192,7 @@
                         width: calc(100% - 1px);
                         height: calc(100% - 1px);
                         background-color: white;
-                        margin-left: 1px;
+                        margin-right: 1px;
                         /* top: -1px;
                         left: -1px; */
                         /* margin: 1px;
