--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -189,10 +189,10 @@
 
                     div {
                         position: absolute;
-                        width: calc(100% - 1px);
+                        width: 100%;
                         height: calc(100% - 1px);
                         background-color: white;
-                        margin-right: 1px;
+                        /* margin-right: 1px; */
                         /* top: -1px;
                         left: -1px; */
                         /* margin: 1px;
