--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -176,6 +176,7 @@
         .v-data-table {
             background: linear-gradient(to right, $dark-blue, $grey-blue) !important;
             border-radius: 0;
+            table-layout: fixed;
 
             td,
             th {
