--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -187,6 +187,8 @@
             tr {
                 td {
                     vertical-align: top;
+                    padding-left: 0;
+                    padding-right: 1px;
 
                     div {
                         position: absolute;
