--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -174,9 +174,12 @@
 .help-handicap-page {
     .help-handicap-01Game-page {
         .v-data-table {
-            background: linear-gradient(to right, $dark-blue, $grey-blue) !important;
-            border-radius: 0;
+            /* background: linear-gradient(to right, $dark-blue, $grey-blue) !important;
+            border-radius: 0; */
             table-layout: fixed;
+            tr {
+                background: linear-gradient(to right, $dark-blue, $grey-blue) !important;
+            }
 
             td,
             th {
