--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -174,12 +174,9 @@
 .help-handicap-page {
     .help-handicap-01Game-page {
         .v-data-table {
-            /* background: linear-gradient(to right, $dark-blue, $grey-blue) !important;
-            border-radius: 0; */
+            background: linear-gradient(to right, $dark-blue, $grey-blue) !important;
+            border-radius: 0;
             table-layout: fixed;
-            tr {
-                background: linear-gradient(to right, $dark-blue, $grey-blue) !important;
-            }
 
             td,
             th {
@@ -187,28 +184,26 @@
                 position: relative;
             }
 
-            tr {
-                td {
-                    vertical-align: top;
-                    padding-left: 0;
-                    padding-right: 1px;
+            tbody tr td {
+                vertical-align: top;
+                padding-left: 0;
+                padding-right: 1px;
 
-                    div {
-                        position: absolute;
-                        width: calc(100% - 1px);
-                        height: calc(100% - 1px);
-                        background-color: white;
-                        /* margin-right: 1px; */
-                        /* top: -1px;
+                div {
+                    position: absolute;
+                    width: 100%;
+                    height: calc(100% - 1px);
+                    background-color: white;
+                    /* margin-right: 1px; */
+                    /* top: -1px;
                         left: -1px; */
-                        /* margin: 1px;
+                    /* margin: 1px;
                         top: -1px;
                         left: -1px; */
 
-                        &.first {
-                            /* width: calc(100% - 2px);
+                    &.first {
+                        /* width: calc(100% - 2px);
                             left: 0; */
-                        }
                     }
                 }
             }
