--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -190,7 +190,7 @@
                 padding-right: 1px;
 
                 div {
-                    position: absolute;
+                    /* position: absolute; */
                     width: 100%;
                     height: calc(100% - 1px);
                     background-color: white;
