--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -189,6 +189,14 @@
                 padding-left: 0;
                 padding-right: 1px;
 
+                &:first-child {
+                    padding-left: 1px;
+
+                    div {
+                        width: calc(100% - 2px);
+                    }
+                }
+
                 div {
                     /* position: absolute; */
                     width: calc(100% - 1px);
