--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -194,6 +194,7 @@
 
                     div {
                         width: calc(100% - 2px);
+                        margin-left: 1px;
                     }
                 }
 
