--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -181,13 +181,13 @@
             td,
             th {
                 border-bottom-width: 0 !important;
-                position: relative;
             }
 
             tbody tr td {
                 vertical-align: top;
                 padding-left: 0;
                 padding-right: 1px;
+                position: relative;
 
                 &:first-child {
                     padding-left: 1px;
@@ -199,6 +199,7 @@
                 }
 
                 div {
+                    position: absolute;
                     width: calc(100% - 1px);
                     height: calc(100% - 1px);
                     background-color: white;
