--- a/resources/sass/theme01/_font.scss
+++ b/resources/sass/theme01/_font.scss
@@ -40,7 +40,9 @@
 }
 
 .help-handicap-page {
-    .help-handicap-01Game-page {
+
+    .help-handicap-01Game-page,
+    .help-handicap-cricket-page {
         .v-data-table {
             thead tr {
                 th {
