--- a/resources/sass/theme01/_template.scss
+++ b/resources/sass/theme01/_template.scss
@@ -7,7 +7,8 @@
 }
 
 .help-series-page,
-.help-handicap-page {
+.help-handicap-page,
+.help-sandbagging-page {
     .divider {
         height: .25rem;
         background: linear-gradient(to right, $dark-blue, white) !important;
